PR/53851: Andreas Gustafsson: libwrap prints "m" instead of errno Handle %m inline if needed, otherwise vasprintf strips the %m and...